socket-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: socket
  template:
    metadata:
      labels:
        app: socket
    spec:
      containers:
        - name: socket
          image: akscr01sample.azurecr.io/socket:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: socket-service
spec:
  selector:
    app: socket
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP  # Internal service
